# mad-fine-scale

./: .gitignore  mad-fine-scale.ioc
Core/Inc/: ADC_Module.hpp  Display_Module.hpp  Peripherals_Module.hpp  RCC_Module.hpp  Statemachine_Module.hpp  Test_Module.hpp  stm32g0xx_hal_conf.h
Core/Src/: adc.c  gpio.c  i2c.c  main.c  main.cpp  tim.c  usart.c
Core/Src/Modules/: ADC_Module.cpp  Display_Module.cpp  Encoder_Module.cpp  GPIO_Module.cpp  Init_Modules.cpp  (+3 more)
Debug/: mad-fine-scale.elf  mad-fine-scale.list  mad-fine-scale.map  objects.list  sources.mk
hardware/: Scale.csv  Scale.kicad_pcb  Scale.kicad_prl  Scale.kicad_pro  Scale.kicad_sch  Scale.round-tracks-config  Scale.xml  _autosave-power_switching.kicad_sch  display.kicad_sch  encoder.kicad_sch  fp-info-cache  instrumentation_amplifier.kicad_sch  mcu.kicad_sch  mcu.kicad_sch-bak  power.kicad_sch  power_switching.kicad_sch  ~Scale.kicad_pcb.lck
hardware/Gerber/: Scale-B_Mask.gbr  Scale-B_Paste.gbr  Scale-B_Silkscreen.gbr  Scale-Back.gbr  Scale-Edge_Cuts.dxf  Scale-Edge_Cuts.gbr  Scale-F_Mask.gbr  Scale-F_Paste.dxf  Scale-F_Paste.gbr  Scale-F_Silkscreen.gbr  Scale-Front.gbr  Scale-NPTH.drl  Scale-PTH.drl  Scale-job.gbrjob  Scale-top-pos.csv
hardware/Silkscreen/: Scale-brd-backside-onlyText.dxf
hardware/bom/: ibom.html
software/: .cproject  .mxproject  .project  mad-fine-scale Debug.launch
software/Debug/: mad-fine-scale.elf  mad-fine-scale.list  mad-fine-scale.map  makefile
software/mfs-rust/: Cargo.toml  Embed.toml  memory.x
software/mfs-rust/.cargo/: config
software/mfs-rust/src/: main.rs
(+131 files in other folders)
